--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,44 @@
-*{
-    margin: 0;
-    padding: 0;
-}
 body{
-    height: 100hv;
+
+    background-color: #99cccc;
+    overflow-x: hidden;
 }
+h2{
+    padding-bottom: 3%;
+}
+a{
+    text-decoration: none;
+    color: #A0E4CB
+}
+section{
+    padding: 5% 5% 2% 5%; 
+}
+/*features*/
+#features{
+    background-color: #f9f9f9;
+
+}
+.feature-icons{
+    margin-bottom: 1rem;
+    color: #A0E4CB;
+}
+.feature-icons:hover{
+    color: #99cccc;
+}
+.fawesome{
+    padding-top: 12px;
+}
+
+/*botones feature*/
+.btn-reserve{
+    margin-top: 3%;
+    border-color: #A0E4CB;
+
+}
+.btn-reserve:hover{
+    border-color: #99cccc;
+    color: #f9f9f9;
+    background-color: #99cccc;
+}
+
+/*card carrousel*/
